# lr4_oop

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
include/: Array.h  Figure.h  Pentagon.h  Point.h  Rhombus.h  Trapezoid.h
